<resources>
    <string name="app_name">Final_Project</string>
    <string name="search_button_text">Search</string>
    <string name="search_hint">Seacrh</string>
    <string name="user_data_key">USER_DATA</string>
    <string name="user_score">Score: %1$s</string>
    <string name="user_login">Login: %1$s</string>
    <string name="user_id">ID: %1$s</string>
    <string name="menu_about">About</string>
    <string name="image_description">avatar</string>
    <string name="user_name">Name: %1$s</string>
    <string name="placeholder_url">url</string>
    <string name="url_key">URL_KEY</string>
    <string name="message_title">Network Error</string>
    <string name="message_text">This App requires an internet connection</string>
    <string name="location">Location: %1$s</string>
    <string name="company">Company: %1$s</string>
    <string name="followers">Followers: %1$s</string>
    <string name="public_gists">Public_Gists: %1$s</string>
    <string name="public_repos">public_repos: %1$s</string>
    <string name="created">created: %1$s</string>
    <string name="updated">updated: %1$s</string>
    <string name="no_results">No results for %1$s </string>
    <string name="created_by">Created by Aditya vashisht and Brinda Dhiren Shah</string>
    <string name="company_name">MAD9132 Inc.</string>
    <string name="email1">vash0005@algonquinlive.com</string>
    <string name="email2">shah0220@algonquinlive.com</string>
    <string name="app_name_v_number">Github Search v1.0.0</string>
    <string name="website_1">github.com/vash0005</string>
    <string name="website_2">github.com/shah0220</string>
    <string name="repos_key">REPOS_KEY</string>
    <string name="followers_key">FOLLOWERS_KEY</string>
    <string name="page_size_key">PAGE_SIZE_KEY</string>

</resources>
